fixed logo on mobile view

--- a/staticfiles/css/navbar.css
+++ b/staticfiles/css/navbar.css
@@ -199,7 +199,7 @@
     .logo {
         display: block;
         margin: 0 auto; /* Center the logo horizontally */
-        height: 4.2em; /* Adjusted height */
+        height: 100%; /* Adjusted height */
     }
 
     .mobile-menu {
